--- a/style.css
+++ b/style.css
@@ -64,9 +64,8 @@ p, a {
 img {
     display: block;
     margin: 20px auto;
-    max-width: 100%;
+    width: auto;
     height: auto;
-    border-radius: 10px;
 }
 
 ol {
