--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body {
     background: #fff;
     padding: 30px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 80%;
+    width: 90%;
     max-width: 800px;
     border-radius: 10px;
     text-align: center;
+    margin: 20px;
 }
 
 h1, h2 {
@@ -33,8 +34,8 @@ h2 {
     font-size: 1.8em;
 }
 
-p {
-    font-size: large;
+label {
+    font-weight: bold;
 }
 
 div {
@@ -82,7 +83,7 @@ ol li {
 @media (max-width: 768px) {
     .container {
         padding: 20px;
-        margin: 30px;
+        margin: 20px;
     }
 
     h1 {
